refactor: 중간 결과 출력 로직 수정